(library
 (public_name zip)
 (synopsis "OCaml ZIP interface")
 (wrapped false)
 (modules gzip zip zlib)
 (c_names zlibstubs)
 (c_flags
  (:include c_flags.sexp))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
